Spree-Devops/Kubernetes/Backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: spree-backend
spec:
  selector:
    app: spree-backend
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
