Spree-Devops/Kubernetes/Frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: spree-frontend
spec:
  selector:
    app: spree-frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 4000
  type: LoadBalancer
