Spree-Devops/Kubernetes/Ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: spree-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: www.spree.com 
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: spree-frontend
            port:
              number: 80
